# AADC_2015_MomenTUM

./: LICENSE.lic  README.md
implementation/: CMakeLists.txt  Readme.txt
implementation/description/: aadc_user.description
implementation/src/: Readme.txt
implementation/src/decision_making/: CMakeLists.txt  Readme.txt
implementation/src/decision_making/AADC_LaneFollower/: CMakeLists.txt  LaneFollower.cpp  LaneFollower.h
implementation/src/decision_making/AADC_SegmentDriver/: CMakeLists.txt  SegmentDriver.cpp  SegmentDriver.h  SegmentPath.cpp  SegmentPath.h  stdafx.h
implementation/src/decision_making/AADC_SpeedRecommender/: CMakeLists.txt  SpeedRecommender.cpp  SpeedRecommender.h
implementation/src/decision_making/MTUM_CarController/: CMakeLists.txt  CarController.cpp  CarController.h
implementation/src/sensor_fusion/: CMakeLists.txt  Readme.txt
implementation/src/sensor_fusion/AADC_ObstacleGrid/: CMakeLists.txt  ObstacleGrid.cpp  ObstacleGrid.h  Sensor.cpp  Sensor.h  SensorIR_Combined.cpp  SensorIR_Combined.h  SensorIR_Short.cpp  SensorIR_Short.h  cCubic.h
implementation/src/sensor_fusion/MTUM_DepthGrid/: CMakeLists.txt  DepthGrid.cpp  DepthGrid.h  DepthSensor.cpp  DepthSensor.h  stdafx.cpp  stdafx.h
implementation/src/sensor_fusion/MTUM_MotionEstimator/: CMakeLists.txt  MotionEstimator.cpp  MotionEstimator.h  stdafx.h
implementation/src/utile/: CMakeLists.txt  Readme.txt
implementation/src/utile/AADC_UserAttitudeConverter/: CMakeLists.txt  EulerAngles.cpp  EulerAngles.hpp  QuatTypes.h  stdafx.h  userAttitudeConverter.cpp  userAttitudeConverter.h
implementation/src/vision/: CMakeLists.txt  Readme.txt
implementation/src/vision/AADC_CrossingDetection/: CMakeLists.txt  crossingDetection.cpp  crossingDetection.h  stdafx.h
implementation/src/vision/AADC_ImageProcessing/: CMakeLists.txt  IPMapper.cpp  IPMapper.h  imageProcessing.cpp  imageProcessing.h  stdafx.h
implementation/src/vision/AADC_LaneDetection/: CMakeLists.txt  ContourModel.cpp  LaneDetector.cpp  LaneModel.h  laneDetection.cpp  laneDetection.h
implementation/src/vision/MTUM_CrossingDetection_ML/: CMakeLists.txt  CrossingModel.cpp  CrossingModel.h  LaneDetector.cpp  LaneDetector.h  WeakClassifier.cpp  crossingDetection_ML.cpp  crossingDetection_ML.h
implementation/src/vision/MTUM_CrossingDetection_ML/strongClassifiers/: classifier_2features.txt  classifier_30features.txt
implementation/src/vision/MTUM_MarkerDetection/: CMakeLists.txt  cMarkerDetectFilter.cpp  cMarkerDetectFilter.h  stdafx.cpp
implementation/src/vision/MTUM_MarkerDetection_FreeDemo/: CMakeLists.txt  cMarkerDetectFilter.cpp  cMarkerDetectFilter.h  stdafx.h
implementation/src/vision/MTUM_ParkingDirection/: CMakeLists.txt  LaneDetector.cpp  ParkingDirectionModel.cpp  ParkingDirectionModel.h  parkingDirection.cpp  parkingDirection.h
implementation/src/vision/MTUM_ParkingDirection/strongClassifiers/: classifier_2features.txt  classifier_30features.txt
implementation/src/vision/MTUM_ParkingSpaceDetection/: CMakeLists.txt  IPMapper.cpp  IPMapper.h  ParkingSpaceDetector.cpp  ParkingSpaceDetector.h  ParkingSpaceModel.cpp  ParkingSpaceModel.h  StrongClassifier.cpp  main.cpp  parkingSpaceDetection.cpp  parkingSpaceDetection.h
implementation/src/vision/MTUM_ParkingSpaceDetection/strongClassifiers/: classifier_parking.txt  classifier_parking_2.txt
implementation/src/vision/MTUM_PylonDetection/: CMakeLists.txt  HSVPicker.cpp  HSVPicker.h  PylonDetector.cpp  PylonDetector.h  main.cpp  pylonDetection.cpp  pylonDetection.h
