add_subdirectory(AADC_LaneDetection)
add_subdirectory(AADC_CrossingDetection)
add_subdirectory(AADC_ImageProcessing)
add_subdirectory(MTUM_ParkingSpaceDetection)
add_subdirectory(MTUM_ParkingDirection)
add_subdirectory(MTUM_MarkerDetection)
add_subdirectory(MTUM_MarkerDetection_FreeDemo)
add_subdirectory(MTUM_PylonDetection)
add_subdirectory(MTUM_CrossingDetection_ML)
